--- a/client/templates/client/partials/navbar.html
+++ b/client/templates/client/partials/navbar.html
@@ -35,6 +35,12 @@
                 <span>Reports</span>
             </a>
         </li>
+        <li>
+            <a href="{% url 'category_list' %}" class="{%if request.path == '/category_list/' %}active{% endif %}">
+                <img src="{% static 'client/img/reports.svg' %}" alt="Categories" class="icon">
+                <span>Categories</span>
+            </a>
+        </li>
         <div class="logout">
             <a href="#" id="logout-link">
                 <img src="{% static 'client/img/logout.svg' %}" alt="Logout" class="icon">
