Fix css file names, delete unnecessary files and edit back button.

--- a/client/templates/client/user_detail.html
+++ b/client/templates/client/user_detail.html
@@ -2,12 +2,12 @@
 {% load static %} 
 
 {% block extra_css %} 
-    <link rel="stylesheet" href="{% static 'client/css/dashboard.css' %}">
+    <link rel="stylesheet" href="{% static 'client/css/user_details.css' %}">
 {% endblock %}
 
 {% block content %}
 
-<a href="javascript:history.back()" class="back-button">←</a>
+<a href="javascript:history.back()" class="back-button"></a>
 
 <div class="user-detail-container">
     
@@ -88,7 +88,6 @@
     </div>
 
 </div>
-
 
 
 {% endblock %}
