Debug navbar.html

--- a/client/templates/client/client_modules.html
+++ b/client/templates/client/client_modules.html
@@ -169,7 +169,7 @@
                     <div class="module-card">
                         <!-- Edit Button -->
                         <div class="edit-button" onclick="window.location.href='{% url 'module_overview' module.id %}'">
-                            <ion-icon name="create-outline"></ion-icon>
+                            <ion-icon name="pencil"></ion-icon>
                         </div>
                         <h5>{{ module.title }}</h5>
                         <p>{{ module.description }}</p>
