--- a/client/templates/client/partials/navbar.html
+++ b/client/templates/client/partials/navbar.html
@@ -24,7 +24,7 @@
             </a>
         </li>
         <li></li>
-            <a href="{% url 'modules_management' %}" class="{%if request.path == '/modules_management/' %}active{% endif %}">
+            <a href="{% url 'client_modules' %}" class="{%if request.path == '/client_modules/' %}active{% endif %}">
                 <img src="{% static 'img/modules.svg' %}" alt="Modules" class="icon">
                 <span>Modules</span>
             </a>
