--- a/users/templates/users/welcome_page.html
+++ b/users/templates/users/welcome_page.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'css/user_authentication.css' %}">
 </head>
 <body>
-    {% include 'welcome_page_navbar.html' %}
+    {% include 'users/welcome_page_navbar.html' %}
 
     <div class="main-content">
         <header class="text-center mt-5">
