--- a/users/templates/users/log_in.html
+++ b/users/templates/users/log_in.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'css/user_authentication.css' %}">
 </head>
 <body>
-    {% include 'welcome_page_navbar.html' %}
+    {% include 'users/welcome_page_navbar.html' %}
 
     <div class="d-flex justify-content-center align-items-center min-vh-100">
         <div class="card p-4 shadow-lg" style="width: 350px;">
