--- a/users/templates/users/userModules.html
+++ b/users/templates/users/userModules.html
@@ -16,10 +16,13 @@
             flex-wrap: wrap;
             gap: 20px;
             margin-top: 20px;
-            min-width: 250px;
-            position: relative;
+            justify-content: flex-start; /* Default behavior */
         }
-
+        
+        .module-grid.one-item {
+            justify-content: center; /* Center align when there's only one module */
+        }
+        
         .view-all-container {
             align-self: flex-end; 
             margin-left: 0;
@@ -52,12 +55,13 @@
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
             transition: transform 0.2s ease-in-out;
             display: flex;
+            flex: 1 1 30%; /* Ensure it maintains a reasonable size */
             flex-direction: column;
             height: 350px;
             width: 30%;
             max-width: 350px;
             box-sizing: border-box;
-            min-width: 100px;
+            min-width: 250px;
         }
 
         .module-grid.one-item {
